# Copyright (c) Huawei Device Co., Ltd. 2026-2026. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# Description: oe service test build.gn file

import("//build/test.gni")
import("//foundation/officeservice/object_editor/object_editor.gni")
module_output_path = "object_editor/fuzztest"

config("fuzzer_config") {
  include_dirs = [
    "${kits_path}/c",
    "${innerkits_path}/include",
    "${object_editor_path}/common/include",
    "${object_editor_path}/document/include",
    "${object_editor_path}/client/include",
    "${object_editor_path}/utils/include/dfx",
    "${object_editor_path}/extension_ability/include",
    "${object_editor_path}/frameworks/kits/extension/include",
    "${object_editor_path}/frameworks/ndk/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
}

ohos_fuzztest("OHContentEmbedGetContentEmbedFormatByOEidAndLocaleFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedgetcontentembedformatbyoeidandlocale_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [
    "ohcontentembedgetcontentembedformatbyoeidandlocale_fuzzer/oh_contentembed_getcontentembedformatbyoeidandlocale_fuzzer.cpp"
  ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OhContentEmbedGetcontentEmbedInfoFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedgetcontentembedinfo_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedgetcontentembedinfo_fuzzer/oh_contentembed_getcontentembedinfo_fuzzer.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedCreateContentEmbedInfoFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedcreatecontentembedinfo_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedcreatecontentembedinfo_fuzzer/oh_contentembed_createcontentembedinfo_fuzzer.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedDestroyContentEmbedInfoFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembeddestroycontentembedinfo_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembeddestroycontentembedinfo_fuzzer/oh_contentembed_destroycontentembedinfo_fuzzer.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedInfoGetFormatCountFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedinfogetformatcount_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedinfogetformatcount_fuzzer/oh_contentembed_info_getformatcount.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedGetFormatFromInfoFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedgetformatfrominfo_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedgetformatfrominfo_fuzzer/oh_contentembed_getformatfrominfo.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedCreateContentEmbedFormatFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedcreatecontentembedformat_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedcreatecontentembedformat_fuzzer/oh_contentembed_createcontentembedformat.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedDestroyContentEmbedFormatFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembeddestroycontentembedformat_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembeddestroycontentembedformat_fuzzer/oh_contentembed_destroycontentembedformat.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedFormatGetOEidFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedformatgetoeid_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedformatgetoeid_fuzzer/oh_contentembed_format_getoeid.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedGetIconFromFormatFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedgeticonfromformat_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedgeticonfromformat_fuzzer/oh_contentembed_geticonfromformat.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedGetFileNameExtensionsFromFormatFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedgetfilenameextensionsfromformat_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedgetfilenameextensionsfromformat_fuzzer/oh_contentembed_getfilenameextensionsfromformat.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedCreateExtensionProxyFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedcreateextensionproxy_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedcreateextensionproxy_fuzzer/oh_contentembed_createextensionproxy.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/document:content_embed_document",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedDestroyExtensionProxyFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembeddestroyextensionproxy_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembeddestroyextensionproxy_fuzzer/oh_contentembed_destroyextensionproxy.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedProxyRegisterOnUpdateFuncFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedproxyregisteronupdatefunc_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedproxyregisteronupdatefunc_fuzzer/oh_contentembed_proxy_registeronupdatefunc.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedProxyRegisterOnErrorFuncFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedproxyregisteronerrorfunc_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedproxyregisteronerrorfunc_fuzzer/oh_contentembed_proxy_registeronerrorfunc.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedProxyRegisterOnEditingFinishedFuncFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedproxyregisteroneditingfinishedfunc_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedproxyregisteroneditingfinishedfunc_fuzzer/oh_contentembed_proxy_registeroneditingfinishedfunc.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedProxyRegisterOnExtensionStoppedFuncFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedproxyregisteronextensionstoppedfunc_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedproxyregisteronextensionstoppedfunc_fuzzer/oh_contentembed_proxy_registeronextensionstoppedfunc.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

ohos_fuzztest("OHContentEmbedGetNameAndDescriptionFromFormatFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "ohcontentembedgetnameanddescriptionfromformat_fuzzer"
  configs = [
    ":fuzzer_config",
  ]
  sources = [ "ohcontentembedgetnameanddescriptionfromformat_fuzzer/oh_contentembed_getnameanddescriptionfromformat.cpp" ]
  deps = [
    "${object_editor_path}/client:content_embed_client",
    "${object_editor_path}/frameworks/ndk:content_embed_ndk",
  ]
  external_deps = [
    "ability_base:want",
    "ability_base:ability_base_want",
    "ability_runtime:ability_context_native",
    "ability_runtime:ability_runtime",
    "ability_runtime:ability_manager",
    "ability_runtime:abilitykit_native",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "image_framework:pixelmap",
    "ipc:ipc_core",
    "ipc:ipc_napi",
    "safwk:system_ability_fwk",
  ]
}

group("fuzztest") {
  testonly = true
  deps = [
    ":OHContentEmbedGetContentEmbedFormatByOEidAndLocaleFuzzTest",
    ":OhContentEmbedGetcontentEmbedInfoFuzzTest",
    ":OHContentEmbedCreateContentEmbedInfoFuzzTest",
    ":OHContentEmbedDestroyContentEmbedInfoFuzzTest",
    ":OHContentEmbedInfoGetFormatCountFuzzTest",
    ":OHContentEmbedGetFormatFromInfoFuzzTest",
    ":OHContentEmbedCreateContentEmbedFormatFuzzTest",
    ":OHContentEmbedDestroyContentEmbedFormatFuzzTest",
    ":OHContentEmbedFormatGetOEidFuzzTest",
    ":OHContentEmbedGetNameAndDescriptionFromFormatFuzzTest",
    ":OHContentEmbedGetIconFromFormatFuzzTest",
    ":OHContentEmbedGetFileNameExtensionsFromFormatFuzzTest",
    ":OHContentEmbedCreateExtensionProxyFuzzTest",
    ":OHContentEmbedDestroyExtensionProxyFuzzTest",
    ":OHContentEmbedProxyRegisterOnUpdateFuncFuzzTest",
    ":OHContentEmbedProxyRegisterOnErrorFuncFuzzTest",
    ":OHContentEmbedProxyRegisterOnEditingFinishedFuncFuzzTest",
    ":OHContentEmbedProxyRegisterOnExtensionStoppedFuncFuzzTest",
  ]
}